@@ -39,6 +39,8 @@
           |
           = link_to t('user.deactivate'), user_path(:current), :method => :delete
 
+        = yield(:sidebar)
+
     #footer
       %b 140.mk
       |
