@@ -1,0 +1,7 @@
+Feature: Fail hashtags in the sidebar
+  In order for this site to be more interesting at first glance
+  As a user
+  I want to look all the latest tweets with #fail hashtags on the front page
+
+  Scenario: Tweets with "#fail" hashtags
+    
