@@ -5,7 +5,7 @@ body {
 /* line 5, ../../../app/stylesheets/_layout.sass */
 #header a, #sidebar a {
   text-decoration: none; }
-  /* line 4, ../../../../../../../../usr/lib/ruby/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/links/_hover_link.sass */
+  /* line 4, ../../../../../../../var/lib/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/links/_hover_link.sass */
   #header a:hover, #sidebar a:hover {
     text-decoration: underline; }
 
@@ -30,10 +30,10 @@ body {
       outline: 0;
       overflow: hidden;
       display: inline-block; }
-      /* line 5, ../../../../../../../../usr/lib/ruby/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/general/_hacks.sass */
+      /* line 5, ../../../../../../../var/lib/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/general/_hacks.sass */
       #header .navigation ul {
         display: block; }
-      /* line 50, ../../../../../../../../usr/lib/ruby/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_horizontal_list.sass */
+      /* line 50, ../../../../../../../var/lib/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_horizontal_list.sass */
       #header .navigation ul li {
         list-style-type: none;
         margin-left: 0px;
@@ -42,10 +42,10 @@ body {
         float: left;
         padding-left: 4px;
         padding-right: 4px; }
-        /* line 40, ../../../../../../../../usr/lib/ruby/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_horizontal_list.sass */
+        /* line 40, ../../../../../../../var/lib/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_horizontal_list.sass */
         #header .navigation ul li.first {
           padding-left: 0px; }
-        /* line 42, ../../../../../../../../usr/lib/ruby/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_horizontal_list.sass */
+        /* line 42, ../../../../../../../var/lib/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_horizontal_list.sass */
         #header .navigation ul li.last {
           padding-right: 0px; }
   /* line 22, ../../../app/stylesheets/_layout.sass */
@@ -95,8 +95,9 @@ body {
   border-radius: 12px;
   -moz-border-radius: 12px;
   -webkit-border-radius: 12px; }
+
 /* line 21, ../../../app/stylesheets/application.sass */
-#categories .category {
+.category, #hashtag_filter {
   background: #E1F3FD;
   margin-top: 10px;
   display: inline;
@@ -111,7 +112,7 @@ body {
   margin-left: 7px;
   position: relative; }
   /* line 30, ../../../app/stylesheets/application.sass */
-  #categories .category h2 {
+  .category h2, #hashtag_filter h2 {
     background: #0094DA;
     color: #fff;
     font-size: 1.4em;
@@ -121,38 +122,38 @@ body {
     -moz-border-radius: 12px;
     -webkit-border-radius: 12px; }
     /* line 38, ../../../app/stylesheets/application.sass */
-    #categories .category h2 a {
+    .category h2 a, #hashtag_filter h2 a {
       color: #fff;
       font-weight: bold;
       text-decoration: none; }
-      /* line 4, ../../../../../../../../usr/lib/ruby/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/links/_hover_link.sass */
-      #categories .category h2 a:hover {
+      /* line 4, ../../../../../../../var/lib/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/links/_hover_link.sass */
+      .category h2 a:hover, #hashtag_filter h2 a:hover {
         text-decoration: underline; }
   /* line 43, ../../../app/stylesheets/application.sass */
-  #categories .category .tabs {
+  .category .tabs, #hashtag_filter .tabs {
     position: absolute;
     top: 40px;
     right: 20px; }
     /* line 48, ../../../app/stylesheets/application.sass */
-    #categories .category .tabs a {
+    .category .tabs a, #hashtag_filter .tabs a {
       color: #666;
       font-weight: bold;
       text-decoration: none; }
-      /* line 4, ../../../../../../../../usr/lib/ruby/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/links/_hover_link.sass */
-      #categories .category .tabs a:hover {
+      /* line 4, ../../../../../../../var/lib/gems/1.8/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/links/_hover_link.sass */
+      .category .tabs a:hover, #hashtag_filter .tabs a:hover {
         text-decoration: underline; }
     /* line 53, ../../../app/stylesheets/application.sass */
-    #categories .category .tabs .selected {
+    .category .tabs .selected, #hashtag_filter .tabs .selected {
       background: #fff;
       padding: 4px;
       border-radius: 6px;
       -moz-border-radius: 6px;
       -webkit-border-radius: 6px; }
   /* line 58, ../../../app/stylesheets/application.sass */
-  #categories .category .users {
+  .category .users, #hashtag_filter .users {
     display: none; }
   /* line 61, ../../../app/stylesheets/application.sass */
-  #categories .category .tweets, #categories .category .users {
+  .category .tweets, .category .users, #hashtag_filter .tweets, #hashtag_filter .users {
     background: #fff;
     margin: 27px 5px 5px 5px;
     padding: 5px;
@@ -160,20 +161,28 @@ body {
     -moz-border-radius: 12px;
     -webkit-border-radius: 12px; }
     /* line 67, ../../../app/stylesheets/application.sass */
-    #categories .category .tweets .tweet, #categories .category .users .tweet {
+    .category .tweets .tweet, .category .users .tweet, #hashtag_filter .tweets .tweet, #hashtag_filter .users .tweet {
       padding: 10px 5px;
       border-bottom: 1px dashed #999;
       min-height: 45px; }
       /* line 72, ../../../app/stylesheets/application.sass */
-      #categories .category .tweets .tweet .body, #categories .category .users .tweet .body {
+      .category .tweets .tweet .body, .category .users .tweet .body, #hashtag_filter .tweets .tweet .body, #hashtag_filter .users .tweet .body {
         color: #666;
         font-size: 0.9em;
         padding-left: 55px; }
         /* line 77, ../../../app/stylesheets/application.sass */
-        #categories .category .tweets .tweet .body .when, #categories .category .users .tweet .body .when {
+        .category .tweets .tweet .body .when, .category .users .tweet .body .when, #hashtag_filter .tweets .tweet .body .when, #hashtag_filter .users .tweet .body .when {
           font-weight: bold; }
       /* line 80, ../../../app/stylesheets/application.sass */
-      #categories .category .tweets .tweet img, #categories .category .users .tweet img {
+      .category .tweets .tweet img, .category .users .tweet img, #hashtag_filter .tweets .tweet img, #hashtag_filter .users .tweet img {
         float: left;
         width: 48px;
         height: 48px; }
+
+/* line 85, ../../../app/stylesheets/application.sass */
+#hashtag_filter {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 260px; }
